test scrollTop issue on ie11

--- a/css/layout/media.css
+++ b/css/layout/media.css
@@ -302,7 +302,7 @@
   }
 }
 
-@media (min-width: 480px) and (max-width: 768px) {
+@media (min-width: 480px) and (max-width: 767px) {
   .category-box
   {
     width: 350px;
